quick html bug fix

--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -93,7 +93,7 @@
         <th>Kill Date</th>
         <th>IP Address</th>
         <th>Implant Port</th>
-        <th>Entity ID</th>
+        <th>Target ID</th>
         <th>Location</th>
         <th>Country</th>
         <th>Implant Name</th>
@@ -105,7 +105,7 @@
         <td>{{ entry.kill_date }}</td>
         <td>{{ entry.ip_address }}</td>
         <td>{{ entry.implant_port }}</td>
-        <td>{{ entry.entity_name }}</td>
+        <td>{{ entry.target_name }}</td>
         <td>{{ entry.location }}</td>
         <td>{{ entry.country }}</td>
         <td>{{ entry.implant_name }}</td>
